# chess-clubs

./: .gitignore  A6021250.db  LICENSE  README.md  aptable.html  dumper.py  pyproject.toml  requirements.txt  run.sh
examples/: dumper.py  example1.py  example2.py
scripts/: add_tournaments.py  dumper.py  example1.py  example2.py  example3.py  get_head_to_head.py
src/chess_clubs/: __init__.py  __main__.py  club.py  config.py  core.py  game.py  game_factory.py  head_to_head.py  history.py  player.py  summary.py  tournament_factory.py
src/clubs/: __init__.py  club.py  head_to_head.py  summary.py
src/games/: __init__.py  game.py  game_factory.py  head_to_head.py  summary.py
src/players/: __init__.py  head_to_head.py  player.py
src/tests/: test_format_name.py  test_get_club_name.py  test_get_page.py  test_load.py
src/tournaments/: __init__.py
src/util/: __init__.py
tests/: __init__.py  config.json  test_config.json  test_database.py  test_game.py  test_game_factory.py  test_get_active_player_list_url.py  test_get_club_name.py  test_get_main_table.py  test_get_page.py  test_head_to_head.py  test_invert_color.py  test_invert_game.py  test_invert_result.py  test_load.py  test_main.py  test_parse_fifth_td.py  test_parse_first_td.py  test_parse_fourth_td.py  test_parse_player.py  test_parse_second_td.py  test_parse_sixth_td.py  test_parse_third_td.py  test_player_name_from_id.py  test_summary.py  test_testdata.py  test_tournament_factory.py
tests/testdata/: A6021250_main.html  active_players.html  club_id  config.json  get_active_players.sh  head_to_head_page.html  head_to_head_tr.html  head_to_head_zero.html  hth_12910923_vs_13214962.html  main.html  (+1 more)
(+11 files in other folders)
