[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-clubs"
version = "0.1.0"
description = "Chess clubs"
authors = [{ name = "Phil Hanna", email = "ph1204@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests", "bs4"]

[tool.setuptools]
packages = ["chess_clubs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "chess_clubs"]
addopts = "-m 'not db and not mainline'"
markers = [
    "db: Marks tests that need a completed database",
    "mainline: Marks tests that run the mainline"
]
